[package]
authors = ["Aaron Power <theaaronepower@gmail.com>"]
categories = ["games", "emulators"]
description = "An Intel 8080 emulator"
keywords = ["intel"]
license = "MIT/Apache-2.0"
name = "i8080"
readme = "README.md"
repository = "https://github.com/Aaronepower/i8080.git"
version = "0.1.0"

[dependencies]
clap = "2.26"
ears = "0.7"
image = { version = "0.15", default-features = false }
piston_window = "0.70"

[features]
cpudiag = []
