[package]
authors = ["Erin Power <mile.moray_0g@icloud.com>"]
categories = ["games", "emulators"]
description = "An Intel 8080 emulator"
keywords = ["intel"]
license = "MIT/Apache-2.0"
name = "i8080"
readme = "README.md"
repository = "https://github.com/XAMPPRocky/i8080.git"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3"
kira = "0.5.3"
pixels = "0.9.0"
winit = "0.26.1"

[features]
cpudiag = []
